--- a/css/report.css
+++ b/css/report.css
@@ -65,3 +65,19 @@
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
+ .reportCategoriesButtons{
+  /*position: relative;*/
+  background-color: #f7f7f7; /* grey */
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+
+}
+button:focus{outline:0;}
+.reportButtonsList{
+
+}
