--- a/css/report.css
+++ b/css/report.css
@@ -2,10 +2,10 @@
 .container {
   display: block;
   position: relative;
-  padding-left: 35px;
+  /* padding-left: 35px; */
   margin-bottom: 12px;
   cursor: pointer;
-  font-size: 22px;
+  /* font-size: 22px; */
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
